--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -43,7 +43,7 @@
     <widget class="QLabel" name="labelTECFrame">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>10</x>
        <y>10</y>
        <width>121</width>
        <height>16</height>
@@ -231,7 +231,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 1</string>
+           <string>1</string>
           </property>
          </widget>
         </item>
@@ -315,7 +315,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 7</string>
+           <string>7</string>
           </property>
          </widget>
         </item>
@@ -375,7 +375,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 4</string>
+           <string>4</string>
           </property>
          </widget>
         </item>
@@ -405,7 +405,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 2</string>
+           <string>2</string>
           </property>
          </widget>
         </item>
@@ -504,7 +504,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 5</string>
+           <string>5</string>
           </property>
          </widget>
         </item>
@@ -638,7 +638,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 3</string>
+           <string>3</string>
           </property>
          </widget>
         </item>
@@ -810,7 +810,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 6</string>
+           <string>6</string>
           </property>
          </widget>
         </item>
@@ -840,7 +840,7 @@
            </font>
           </property>
           <property name="text">
-           <string>TEC 8</string>
+           <string>8</string>
           </property>
          </widget>
         </item>
